k8s/kk-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kk-api
  namespace: kijani-project
  labels:
    app: kk-api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: kk-api

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  template:
    metadata:
      labels:
        app: kk-api

    spec:
      containers:
        - name: kk-api
          image: nginx:alpine
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 80
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
