k8s/kk-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kk-api
  namespace: kijani-project
  labels:
    app: kk-api

spec:
  type: ClusterIP

  selector:
    app: kk-api

  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
